--- a/src/main/resources/com/klab/gui/console.fxml
+++ b/src/main/resources/com/klab/gui/console.fxml
@@ -3,6 +3,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.*?>
 <?import org.fxmisc.richtext.CodeArea?>
 <SplitPane xmlns:fx="http://javafx.com/fxml/1" dividerPositions="0.7" orientation="VERTICAL"
@@ -17,9 +18,10 @@
         </AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
             <children>
-                <CodeArea fx:id="commandInput" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed"
+                <TextArea fx:id="commandInput" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed"
                           prefHeight="100.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
+                          promptText="Enter command here..."/>
             </children>
         </AnchorPane>
     </items>
