--- a/src/main/resources/com/klab/gui/code-profiling-report.fxml
+++ b/src/main/resources/com/klab/gui/code-profiling-report.fxml
@@ -3,9 +3,9 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.web.WebView?>
-<BorderPane fx:controller="com.klab.gui.controller.ProfilingCodeReportController" maxHeight="-Infinity"
-            maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.klab.gui.controller.ProfilingCodeReportController"
+            maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40">
     <center>
         <WebView fx:id="codeListening" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
     </center>
